[tool.poetry]
name = "year2-proj"
version = "v2022.2.27"
description = "University of Liverpool ELEC222-202122 Year 2 project; quadruped-robot-locomotion simulation in PyBullet."
authors = [
    "Minghong Xu",
    "Zepeng Pang",
    "Kai Yang",
    "Zehao Ye",
]

[tool.poetry.dependencies]
python = ">=3.10"
pybullet = "3.2.0"
ipykernel = "6.9.0"
numpy = "^1.22.2"
pandas = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
