[tool.poetry]
name = "year2-proj"
version = "2022.03.18"
description = "University of Liverpool ELEC222-202122 Year 2 project: simulating quadrupedal locomotion in PyBullet. The supervisor is Dr Murat Uney."
authors = [
    "Minghong Xu",
    "Zepeng Pang",
    "Kai Yang",
    "Zehao Ye",
]

[tool.poetry.dependencies]
python = ">=3.10"
pybullet = "3.2.0"
ipykernel = "6.9.0"
numpy = "^1.22.2"
pandas = "^1.4.0"
Pygments = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
