[tool.poetry]
name = "simulation"
version = "v2022.1.2"
description = "Quadruped-robot-locomotion simulation code of ELEC222-202122 year 2 project."
authors = [
    "Minghong Xu",
    "Zepeng Pang",
    "Kai Yang",
    "Zehao Ye",
]

[tool.poetry.dependencies]
python = ">=3.9"
pybullet = "3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
